# ropod-project

./: .gitignore  README.md
documentation/reports/: .gitignore  CESAR_testfile.txt  Noud_testfile.txt  README.md  test2  testfile.txt
documentation/reports/notation/: .gitignore  ROPOD_notation.tex
documentation/system_overview/: Overview_Software.dia  System_Architecture.dia
experimental-data/: README.md
software/globaldef/: Slave description TUe 8 wheel platform.txt  motor_parameters.m  ropod_parameters.m
software/src/: README.md
software/tools/: README.md
software/tools/WorldModels/data/world_model_tutorials/: .gitattributes
software/tools/WorldModels/tue_utils/: stack.xml
software/tools/WorldModels/tue_utils/.metadata/: version.ini
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.cdt.core/: rosbag_video.language.settings.xml
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.cdt.ui/: cHelpSettings.xml
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.core.resources/: 1.snap
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.core.resources/.projects/RemoteSystemsTempFiles/org.eclipse.egit.core/: GitProjectData.properties
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.core.resources/.projects/rosbag_video/: .markers.snap
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.core.resources/.projects/rosbag_video/.indexes/: properties.index
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.core.resources/.projects/rosbag_video/org.eclipse.egit.core/: GitProjectData.properties
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/local-history/: segments_1
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/remote-history/: segments_1
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.rse.core/profiles/PRF.houtman_64/: node.properties
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.ui.workbench/: workbench.xml  workingsets.xml
software/tools/WorldModels/tue_utils/.metadata/.plugins/org.eclipse.wst.sse.core/: task-tags.properties
software/tools/WorldModels/tue_utils/rosbag_video/: .cproject  .project  CMakeLists.txt  mainpage.dox
software/tools/WorldModels/tue_utils/rosbag_video/Debug/: makefile  sources.mk
software/tools/WorldModels/tue_utils/rosbag_video/Debug/src/: subdir.mk
software/tools/WorldModels/tue_utils/rosbag_video/launch/: split_bag.launch
software/tools/WorldModels/tue_utils/rosbag_video/src/: bag_to_video.cpp  play.cpp  video_to_bag.cpp
software/tools/WorldModels/tue_utils_Original/rosbag_video/: manifest.xml
software/tools/WorldModels/tue_utils_Original/rosbag_video/launch/: merge_bag_video.launch
software/tools/WorldModels/tue_utils_Original/rosbag_video/parameters/: params.yaml
software/tools/WorldModels/tue_utils_Original/rosbag_video/src/: bag_to_video.cpp  video_to_bag.cpp
software/tools/WorldModels/wire/: README.md
software/tools/WorldModels/wire/armadillo_matrix/: CMakeLists.txt
software/tools/WorldModels/wire/problib/: manifest.xml
software/tools/WorldModels/wire/problib/include/problib/: globals.h
software/tools/WorldModels/wire/problib/src/problib/msg/: _DimensionDescription.py  _PDF.py  _PDFImpl.py  __init__.py
software/tools/WorldModels/wire/wire_core/: manifest.xml
software/tools/WorldModels/wire/wire_core/src/: dummy_evidence_publisher.cpp
software/tools/WorldModels/wire/wire_msgs/: manifest.xml
software/tools/WorldModels/wire/wire_state_estimators/: manifest.xml
software/tools/WorldModels/wire/wire_state_estimators/src/: DiscreteFilter.cpp  FixedState.cpp
software/tools/WorldModels/wire/wire_tutorials/: mainpage.dox
software/tools/WorldModels/wire/wire_viz/: CMakeLists.txt  mainpage.dox  manifest.xml
software/tools/WorldModels/wire_fuerte/: stack.xml
software/tools/WorldModels/wire_fuerte/armadillo_matrix/: manifest.xml
software/tools/WorldModels/wire_fuerte/problib/: CMakeLists.txt  mainpage.dox  manifest.xml
software/tools/WorldModels/wire_fuerte/wire_core/: CMakeLists.txt  mainpage.dox
software/tools/WorldModels/wire_fuerte/wire_msgs/: mainpage.dox
software/tools/WorldModels/wire_fuerte/wire_state_estimators/: CMakeLists.txt  mainpage.dox
software/tools/WorldModels/wire_fuerte/wire_state_estimators/src/: MultiModelFilter.cpp  PositionFilter.cpp
software/tools/WorldModels/wire_fuerte/wire_tutorials/: CMakeLists.txt  manifest.xml
software/tools/dynamic_model_test/: .gitignore  ROPOD_dynamic_model_sim_Wheel_Input.slx  Test_dynamic_model.m  set_ropod_configparams_sim.m
software/tools/dynamic_model_test/Symbolic_dynamic_model/: ActivecasterwheelRobot_InvKinMod.m  ActivecasterwheelRobot_KinMod.m  ActivecasterwheelRobot_Lagrange_construction.m  DiffDrive_DynMod.m  EulerLagrange.m  Lagrange.m  diffMtime.m  sympoly2sm.m
software/tools/dynamic_model_test/slprj/: .gitignore
software/tools/dynamic_model_test/slprj/_sfprj/: .gitignore
software/tools/kinematic_model_test/: Ropod_kinematic_model_test.m  ropod_KinModTest.slx  straightline_traj.mat  techunited_sim_traj.mat
software/tools/kinematic_model_test/Symbolic_kinematic_model/: ActivecasterwheelRobot_InvKinMod.m  ActivecasterwheelRobot_KinMod.m
software/tools/ropod_visualization/: Trial_script_robot_visualization.m  robot_visualization.m
software/tools/ropod_visualization/Functions/: plot_PathWheels.m  plot_Robot.m  plot_Wheels.m
software/tools/rviz-files/: ED-config-localization.rviz  ED-tutorial7-config.rviz
(+3 files in other folders)
